[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/exit.png" type="Texture" id=1]
[ext_resource path="res://assets/play.png" type="Texture" id=2]
[ext_resource path="res://assets/vkx_pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://menu/SceneTransition.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/main_menu.gd" type="Script" id=5]
[ext_resource path="res://assets/logo.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayControl:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2.63902, 1 ),
"update": 0,
"values": [ -130.0, 138.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuitControl:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2.63902, 1 ),
"update": 0,
"values": [ 406.0, 138.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LogoSprite:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( -2.63902, 0.466517, 1 ),
"update": 0,
"values": [ -40.0, 45.0, 40.0 ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -12.0
margin_right = 21.9995
margin_bottom = 12.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="PlayControl"]
margin_top = 2.0
margin_right = 44.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayControl"]
margin_left = 4.0
margin_top = 3.0
margin_right = 55.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "PLAY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = 11.0
margin_right = 21.9997
margin_bottom = 35.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="QuitControl"]
margin_left = -1.0
margin_top = 2.0
margin_right = 43.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="QuitControl"]
margin_left = 4.0
margin_top = 3.0
margin_right = 55.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "QUIT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -22.0
margin_right = -4.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 125, -35 )
custom_fonts/font = SubResource( 6 )
text = "By Vyrkx and Rin Kaoru
"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditLabel2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -25.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 125, -35 )
custom_fonts/font = SubResource( 6 )
text = "During Bored Pixels Jam 8"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoSprite" type="Sprite" parent="."]
position = Vector2( 160, 40 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 5 )

[node name="SceneTransition" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="PlayControl/Button" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="QuitControl/Button" to="." method="_on_QuitButton_pressed"]
[connection signal="on_animation_finished" from="SceneTransition" to="." method="_on_SceneTransition_on_animation_finished"]
